--- a/example/public/index.html
+++ b/example/public/index.html
@@ -32,7 +32,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
 
-    <div id="root"></div>
+    <div id="root" style="width: 100%; height:100%"></div>
 
     <!--
       This HTML file is a template.
